[project]
name = "servidor-dns"
version = "0.1.0"
description = ""
authors = [
    {name = "jesichi/linux",email = "jesichiko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "json-rpc (>=1.15.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "servidor_dns", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
