[project]
name = "contador"
version = "0.1.0"
description = ""
authors = [
    {name = "jesichi/linux",email = "jesichiko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "contador", from = "src"}]

[tool.poetry.scripts]
server = "contador.server.server:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
