[project]
name = "base-productos"
version = "0.1.0"
description = ""
authors = [{ name = "jesichi/linux", email = "jesichiko@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [{ include = "base_productos", from = "src" }]

[tool.poetry.scripts]
server = "src.base_productos.App:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
